** Added integration test profile for rest project pom.xml